# tumor-likelihood-tool

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  data_loader.py  main.py  parser.py  profile_queries.py  schemas.py  scoring.py
data/: build_manifest.json  event_catalog.json  priors_detailed.json  priors_tumor.json  tumor_mapping.json
docs/superpowers/plans/: 2026-04-09-aacr-genie-attribution-footer.md
docs/superpowers/specs/: 2026-04-09-aacr-genie-attribution-footer-design.md
scripts/: build_indices.py
static/: app.css  app.js  gene-profile.js  molpath.css  profile.css  style.css  tumor-profile.js
templates/: gene_profile.html  index.html  tumor_profile.html  tutorial.html
templates/partials/: footer.html  nav.html
tests/: conftest.py  test_api.py  test_footer.py  test_parser.py  test_profile_api.py  test_scoring.py
