[project]
name = "tumor-likelihood-tool"
version = "1.0.0"
description = "Bayesian tumor-type likelihood ranking from somatic mutation and CNA evidence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "polars>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "httpx>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
